fix our history on mobile

--- a/public/assets/css/about.css
+++ b/public/assets/css/about.css
@@ -1,13 +1,15 @@
 /* introduction.html css start */
 @property --hue {
-    syntax: '<angle>';
+    syntax: "<angle>";
     initial-value: 0turn;
     inherits: false;
-  }
+}
 
-  @keyframes hue-cycle { to {
-    --hue: 1turn;
-  }}
+@keyframes hue-cycle {
+    to {
+        --hue: 1turn;
+    }
+}
 
 .bg-wrapper {
     padding: 50px 0px 50px 0px;
@@ -938,4 +940,109 @@ hr.rounded {
 }
 
 @media screen and (max-width: 767px) {
+}
+
+/* ini css ngambil dari business.css */
+
+.product-wrapper {
+    display: flex;
+    gap: 20px;
+    flex-direction: column;
+}
+
+.product-wrapper .collapsible {
+    place-content: center space-between;
+    display: flex;
+    align-items: center;
+    background-color: #40455c;
+    color: white;
+    cursor: pointer;
+    padding: 50px 30px;
+    height: min-content;
+    flex-flow: row;
+    border-radius: 20px 20px 0 0;
+    width: 100%;
+    border: none;
+    outline: none;
+    font-size: 15px;
+    pointer-events: none;
+}
+
+.product-wrapper .content {
+    padding: 50px 0px 30px 0px;
+    background-color: rgb(248, 249, 252);
+    overflow: hidden;
+    border-radius: 0 0 20px 20px;
+    transition: max-height 0.2s ease-out;
+}
+
+.product-wrapper .content .img-box {
+    place-content: flex-start center;
+    display: flex;
+    flex: 0 0 auto;
+    flex-flow: row;
+    gap: 24px;
+    margin-bottom: 20px;
+    overflow: visible;
+    position: relative;
+}
+
+.dekstop-history {
+    display: block;
+}
+
+.mobile-history {
+    display: none;
+}
+
+@media screen and (max-width: 1140px) {
+    .our-history {
+        gap: 50px;
+        padding: 50px 20px;
+    }
+
+    .dekstop-history {
+        display: none;
+    }
+
+    .mobile-history {
+        display: block;
+    }
+
+    .product-wrapper .collapsible span {
+        font-size: 24px;
+    }
+
+    .collapsible:after {
+        content: url(../../assets/images/icon/open-icon-white-mini.png);
+        border-radius: 20px 20px 0px 0px;
+        /* color: white; */
+        font-weight: bold;
+        float: right;
+    }
+
+    .product-wrapper .collapsible {
+        padding: 20px;
+    }
+
+    .product-wrapper .content {
+        padding: 20px 0px 20px 0px;
+    }
+
+    .product-wrapper .content .text-wrapper {
+        gap: 20px;
+        display: flex;
+        padding: 20px;
+        flex-direction: column;
+    }
+
+    .product-wrapper .content .text-wrapper h1 {
+        font-size: 28px;
+        font-weight: 400;
+    }
+
+    .product-wrapper .content .img-box {
+        flex-direction: column;
+        padding: 0 20px;
+    }
 }
